--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon"  href="./public/icon-software.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>My Portfolio Nicolas Duarte</title>
   </head>
   <body>
     <div id="root"></div>
